--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "4.0.3",  
     "web-vitals": "^1.1.2"
+  },
+  "devDependencies" : {
+    "sass": "^1.42.1"
   },
   "scripts": {
     "start": "react-scripts start",
