--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",  
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
-  "devDependencies" : {
+  "devDependencies": {
     "sass": "^1.42.1"
   },
   "scripts": {
