--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "beers-api",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://halfiies.github.io/beers.api",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "gh": "^2.8.9",
+    "pages": "0.0.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -13,9 +16,11 @@
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "sass": "^1.42.1"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
