--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pages": "0.0.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
